# scripts

./: .gitignore  Makefile
.github/workflows/: codeql.yml  main.yaml
papis-bibtex/: README.md  papis-bibtex  setup.py
papis-bibtex/papis_bibtex/: main.py
papis-html/: Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
papis-html/papis_html/: __init__.py
papis-html/papis_html/data/: index.html
papis-html/vue/: package-lock.json  package.json
papis-html/vue/public/: index.html
papis-html/vue/src/: App.vue
papis-html/vue/src/assets/: lib.json
papis-html/vue/src/components/: Item.vue  List.vue
papis-rofi/: README.rst  setup.py
papis-rofi/papis_rofi/: __init__.py  config.py  main.py
papis-scihub/: README.md  README.rst  papis-scihub  pyproject.toml  setup.py
papis-scihub/papis_scihub/: plugin.py
