[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.10.0"]

[project]
name = "papis-html"
version = "0.1"
description = "Create a simple searchable offline HTML site with your references"
readme = "README.rst"
keywords = [
    "bibtex",
    "biliography",
    "cli",
    "html",
    "javascript",
    "management",
    "papis",
]
license = { text = "GPL-3.0-or-later" }
maintainers = [{ name = "Alejandro Gallo", email = "aamsgallo@gmail.com" }]
authors = [{ name = "Alejandro Gallo", email = "aamsgallo@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "papis~=0.14",
]

[project.urls]
Repository = "https://github.com/papis/scripts/tree/master/papis-html"

[project.optional-dependencies]
develop = [
    "flake8",
    "flake8-bugbear",
    "Flake8-pyproject",
    "flake8-quotes",
    "mypy>=0.7",
    "pep8-naming",
]

[project.entry-points."papis.command"]
html = "papis_html:main"

[tool.hatch.build.targets.wheel]
packages = ["papis_html"]

[tool.flake8]
select = ["B", "D", "E", "F", "N", "Q", "W"]
extend-ignore = ["B019", "E123", "N818", "W503"]
max-line-length = 88
inline-quotes = "double"
multiline-quotes = "double"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
hide_error_codes = false
files = [ "papis_html" ]
warn_unused_ignores = false
